--- a/src/sass/base/_typography.scss
+++ b/src/sass/base/_typography.scss
@@ -1,8 +1,17 @@
 @font-face {
-  font-family: 'Roboto';
-  src: url('../fonts/roboto-regular.woff2');
+  font-family: 'Montserrat';
+  src: url(../../fonts/Montserrat-Regular.woff2) format(woff2),
+       url(../../fonts/Montserrat-Regular.woff) format(woff);
   font-weight: normal;
   font-style: normal;
   font-display: swap;
- }
- 
+}
+
+@font-face {
+  font-family: 'Montserrat';
+  src: url(../../fonts/Montserrat-Bold.woff2) format(woff2),
+       url(../../fonts/Montserrat-Bold.woff) format(woff);
+  font-weight: bold;
+  font-style: normal;
+  font-display: swap;
+}
