--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -1,6 +1,21 @@
 .header {
-  padding: 20px;
-  min-height: 100px;
-  background-color: blue;
-  color: white;
+  position: relative;
+  background: linear-gradient(228.57deg, #323264 11.93%, #323264 57.17%, #643E72 87.46%);
+  height: 100vh;
+
+  &__btn-scroll {
+    position: absolute;
+    bottom: 30px;
+    left: 50%;
+    transform: translateX(-50%);
+  }
+
+  &::before {
+    position: absolute;
+    top: 0;
+    left: 50%;
+    width: 87.234vh;
+    transform: translateX(-50%);
+    content: url(../img/h.svg);
+  }
 }
