--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -19,3 +19,10 @@
     content: url(../img/h.svg);
   }
 }
+
+.icon {
+  display: inline-block;
+  padding: 14px;
+  background: #fff;
+  border-radius: 24px;
+}
