--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -3,6 +3,8 @@
 @use 'abstracts/mixins' as *;
 @use 'abstracts/placeholders' as *;
 
+@use 'vendor/swiper';
+
 @use 'base/normalize';
 @use 'base/reset';
 @use 'base/typography';
