--- a/src/sass/base/_reset.scss
+++ b/src/sass/base/_reset.scss
@@ -1,11 +1,11 @@
 html {
   font-size: 16px;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Montserrat', sans-serif;
+  font-style: normal;
 }
 
 body {
   margin: 0;
-  background-color: #fff;
 }
 
 *, *::after, *::before {
@@ -15,4 +15,15 @@ body {
 ul {
   margin: 0;
   padding: 0;
+  list-style: none;
+
+}
+
+a {
+  color: #FFFFFF;
+  text-decoration: none;
+
+  &:hover {
+    cursor: pointer;
+  }
 }
