--- a/src/sass/layout/_cards.scss
+++ b/src/sass/layout/_cards.scss
@@ -1,23 +1,23 @@
 @use '../abstracts/variables' as *;
 
-.cards {
-  // display: flex;
-  // flex-flow: row wrap;
-  // gap: 20px;
-  align-items: stretch;
-}
+// .cards {
+//   // display: flex;
+//   // flex-flow: row wrap;
+//   // gap: 20px;
+//   align-items: stretch;
+// }
 
-.swiper-slide {
-  height: auto;
-}
+// .swiper-slide {
+//   height: auto;
+// }
 
-.swiper-pagination-bullet {
-  height: 16px;
-  width: 16px;
-  background-color: $active-color-regular;
-}
+// .swiper-pagination-bullet {
+//   height: 16px;
+//   width: 16px;
+//   background-color: $active-color-regular;
+// }
 
-.cards-pagination {
- text-align: center;
- margin-top: 30px;
-}
+// .cards-pagination {
+//  text-align: center;
+//  margin-top: 30px;
+// }
