--- a/src/sass/layout/_container.scss
+++ b/src/sass/layout/_container.scss
@@ -1,4 +1,10 @@
 .container {
-  max-width: 1024px;
+  max-width: 375px;
   margin: 0 auto;
+  padding-right: 30px;
+  padding-left: 30px;
+
+  // overflow: hidden;
+
+  // border: 1px solid yellow;
 }
