--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -1,5 +1,91 @@
+@use '../abstracts/variables' as *;
+@use '../abstracts/mixins' as *;
+
 .footer {
-  padding: 20px;
-  min-height: 100px;
-  background-color: yellow;
+  background-color: #F5F5FA;
+
+  &__items {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-top: 2px solid  #E6E6F0;
+    padding: 30px;
+
+     &-place {
+      text-align: center;
+      margin-bottom: 21px;
+
+      &_adress {
+        margin-bottom: 10px;
+        font-weight: 400;
+        font-size: 16px;
+        line-height: 20px;
+        color: $main-color-regular;
+      }
+
+      &_map {
+        font-weight: 700;
+        font-size: 12px;
+        line-height: 15px;
+        letter-spacing: 1px;
+        text-transform: uppercase;
+        color: $active-color-regular;
+
+      }
+    }
+  
+    &-contacts {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 10px;
+      margin-bottom: 30px;
+  
+      &_icon {
+        width: 39px;
+        height: 38px;
+
+        & svg {
+          --footer_fb_color: #24A3FF;
+          width: 39px;
+          height: 38px;
+
+          &:hover {
+            --footer_fb_color: #F0145A;
+          }
+        }
+
+      }
+  
+      &_call {
+        display: flex;
+        font-weight: 700;
+        font-size: 16px;
+        line-height: 20px;
+        text-align: right;
+        color: $main-color-alt;
+      }
+  
+      &_mail {
+        display: flex;
+        font-weight: 700;
+        font-size: 16px;
+        line-height: 20px;
+        color: $active-color-regular;
+
+        &:hover {
+          color: $accent-color;
+        }
+      }
+    }
+
+    &-promo {
+      font-weight: 400;
+      font-size: 16px;
+      line-height: 20px;
+      color: #B3B3BA;
+      margin-left: -10px;
+      margin-right: -10px;
+    }
+  }
 }
