--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -3,8 +3,14 @@ $tablet-sd: 768px;
 $tablet-hd: 1024px;
 $desktop-sd: 1440px;
 $desktop-hd: 1920px;
+$rotate: 500px;
 
 $baseFontSize: 20px;
+
+$baseIndent: 60px;
+
+$baseAnimation: all 0.3s linear;
+
 
 $main-color-regular: #323264;
 $main-color-alt: #46466E;
