--- a/src/sass/components/_btn.scss
+++ b/src/sass/components/_btn.scss
@@ -6,13 +6,16 @@
 
   &__language {
     padding: 5px 7px;
-    border-radius: 8px;
-    font-weight: 700;
     font-size: 12px;
-    line-height: 15px;
+    line-height: 14px;
+    font-weight: 700;
     text-align: center;
     letter-spacing: 1px;
     text-transform: uppercase;
+
+    border-radius: 8px;
+
+    transition: $baseAnimation;
 
     &:hover {
       color: #B3B3BA;
@@ -20,35 +23,84 @@
     }
   }
 
-  & .is-active {
+  .is-active_ua,
+  .is-active_ru,
+  .is-active_en {
     background-color: $accent-color;
-
-    &:hover {
-      color: #fff;
-    }
   }
 }
 
 .burger {
-  padding: 0;
-  background: none;
-  border: none;
+  position: relative;
 
-  & svg {
+  width: 32px;
+  height: 32px;
+  padding: 0;
+
+  background: transparent;
+  border: none;
+  border-radius: 8px;
+
+  cursor: pointer;
+
+  transition: $baseAnimation;
+
+  &-icon {
+    width: 100%;
+
     stroke: rgb(255, 255, 255);
   }
 
-  & svg:hover {
-    cursor: pointer;
-    stroke: $accent-color;
+  &:hover {
+    --burgerColor: #323264;
+    background-color: #E6E6F0;
+  }
+}
+
+.close {
+  display: flex;
+  width: 32px;
+  height: 32px;
+  padding: 0;
+
+  background: transparent;
+  border: none;
+  border-radius: 8px;
+
+  cursor: pointer;
+
+  transition: all 0.1s linear;
+
+  &-icon {
+    width: 100%;
+
+    --closeColor: #EC6F5D;
+  }
+
+  &:hover {
+    background-color: #E6E6F0;
   }
 }
 
 .btn-scroll {
+  width: 42px;
+  height: 42px;
+  padding: 0;
+
+  background: transparent;
+  border: 0;
   stroke: #fff;
+  fill: none;
+
+  transition: $baseAnimation;
+
+  &_icon {
+    width: 100%;
+  }
 
   &:hover {
-    cursor: pointer;
     stroke: $accent-color;
+
+    cursor: pointer;
   }
 }
