--- a/src/sass/layout/homePage/_homepage_header.scss
+++ b/src/sass/layout/homePage/_homepage_header.scss
@@ -7,6 +7,7 @@
   position: relative;
 
   height: 100%;
+  margin-bottom: 50px;
 
   background: $supersoft-color-gradient;
   border-radius: 0px 0px 12px 12px;
