--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -12,6 +12,7 @@
 
 @use 'layout/homePage/homepage_header';
 @use 'layout/homePage/homepage_team';
+@use 'layout/services/services_header';
 @use 'layout/footer';
 @use 'layout/header';
 @use 'layout/clients';
