--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -12,7 +12,7 @@
       "place"
       "contacts"
       "promo";
-    align-items: center;
+    align-self: center;
 
     border-top: 2px solid #E6E6F0;
 
