--- a/src/sass/layout/homePage/_homepage_team.scss
+++ b/src/sass/layout/homePage/_homepage_team.scss
@@ -5,7 +5,6 @@
 .team {
 
   &__cards {
-    padding-top: 50px;
     align-items: stretch;
 
     @include tablet-sd {
@@ -118,7 +117,7 @@
 
 .cards-pagination {
   margin-top: calc($baseIndent / 2);
-  margin-bottom: $baseIndent;
+  margin-bottom: calc($baseIndent / 2);
 
   text-align: center;
 
