--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -4,20 +4,28 @@
 
 .header {
   position: absolute;
-  right: 0;
-  left: 0;
+  right: -30px;
+  left: -30px;
+
+  padding-left: 30px;
+  padding-right: 30px;
 
   display: grid;
   max-width: 100vw;
   grid-template-columns: repeat(2, 1fr);
-  gap: calc($baseIndent / 4);
+  grid-template-rows: repeat(2, 1fr);
+  column-gap: calc($baseIndent / 4);
+
   grid-template-areas:
     "contacts contacts"
     "logo burger";
 
   @include tablet-sd {
-    padding: 50px $baseIndent 0;
+
+    padding-top: 50px;
     grid-template-columns: 1fr;
+    grid-template-rows: repeat(3, max-content);
+    column-gap: calc($baseIndent / 2);
     gap: calc($baseIndent / 2);
     grid-template-areas:
       "contacts"
@@ -30,20 +38,24 @@
   }
 
   @include tablet-hd {
+
     column-gap: 0;
     row-gap: 16px;
     grid-template-columns: repeat(2, minmax);
+    grid-template-rows: repeat(2, 1fr);
     grid-template-areas:
       "logo contacts"
       "logo menu";
     align-self: center;
   }
 
+
   .burger__wrapper {
     display: flex;
-    padding-right: calc($baseIndent / 4);
     grid-area: burger;
     justify-content: flex-end;
+    margin-right: -15px;
+    align-self: center;
 
     @include tablet-sd {
       display: none;
@@ -55,61 +67,63 @@
     z-index: 1;
 
     display: flex;
-    padding: calc($baseIndent / 4);
+    padding-top: calc($baseIndent / 4);
+    padding-bottom: calc($baseIndent / 4);
+    gap: 18px;
     grid-area: contacts;
     justify-content: space-between;
     align-items: center;
 
     @include tablet-sd {
+      padding-top: 0;
       padding-bottom: 0;
-      padding-left: 0;
+      align-items: flex-end;
+
       justify-content: flex-start;
     }
 
     @include tablet-hd {
       padding-top: 0;
+      align-items: center;
     }
 
     & .langswitcher {
+      margin-left: -20px;
+
       @include tablet-sd {
-        margin-right: 6px;
+        margin-left: 0;
+      }
+    }
+
+    & .header-fb {
+      display: none;
+
+      @include tablet-sd {
+        display: flex;
       }
     }
 
     &-adress {
+      position: relative;
+
       display: none;
 
       transition: $baseAnimation;
 
       @include tablet-sd {
         display: flex;
-        align-items: center;
       }
 
       &::before {
         content: "";
 
-        display: none;
-        width: 6px;
-        height: 6px;
-        margin-right: 6px;
-
-        background: #E6E6F0;
-        border-radius: 50%;
-
-        @include tablet-sd {
-          display: flex;
-        }
-      }
-
-      &::after {
-        content: "";
+        position: absolute;
+        left: -12px;
 
         display: none;
         width: 6px;
         height: 6px;
-        margin-right: 6px;
-        margin-left: 6px;
+        align-self: center;
 
         background: #E6E6F0;
         border-radius: 50%;
@@ -132,50 +146,44 @@
       }
     }
 
-    &-fb {
-      display: none;
-
-      @include tablet-sd {
-        display: flex;
-        width: 24px;
-        height: 24px;
-
-        --fb_color: #fff;
-      }
-
-      &_icon {
-        width: 100%;
-      }
-
-      &:hover {
-        --fb_color: #F0145A;
-      }
-    }
-
     &-call {
+      position: relative;
+
       font-size: 16px;
       line-height: 20px;
       font-weight: 700;
+
+      margin-right: -15px;
 
       transition: $baseAnimation;
 
       @include tablet-sd {
         display: flex;
-        align-items: center;
+        margin-right: 0;
       }
 
       &:hover {
         color: $accent-color;
+
+        @include tablet-sd {
+          color: white;
+        }
+
+        @include tablet-hd {
+          color: $accent-color;
+        }
       }
 
-      &::after {
+      &::before {
         content: "";
+
+        position: absolute;
+        left: -12px;
 
         display: none;
         width: 6px;
         height: 6px;
-        margin-right: 6px;
-        margin-left: 6px;
+        align-self: center;
 
         background: #E6E6F0;
         border-radius: 50%;
@@ -195,27 +203,57 @@
       left: 0;
       z-index: -1;
 
+
+      margin-left: -30px;
+      margin-right: -30px;
+
       background-color: rgba(245, 245, 250, 0.2);
 
       @include tablet-sd {
         content: none;
       }
     }
+
+    & .header-fb {
+      position: relative;
+
+      &::before {
+        content: "";
+
+        position: absolute;
+        left: -12px;
+
+        display: none;
+        width: 6px;
+        height: 6px;
+        align-self: center;
+
+        background: #E6E6F0;
+        border-radius: 50%;
+
+        @include tablet-sd {
+          display: flex;
+        }
+      }
+    }
   }
 
-  &__logo {
+  &__breadcrumbs {
+
     position: relative;
     z-index: 1;
+
+    margin-left: -15px;
 
     display: flex;
     grid-area: logo;
     width: max-content;
-    padding-left: calc($baseIndent / 4);
-
-    cursor: pointer;
+    align-self: center;
+    // padding-left: calc($baseIndent / 4);
 
     @include tablet-sd {
-      padding-left: 0;
+      margin-left: 0;
+      // padding-left: 0;
     }
 
     @include tablet-hd {
@@ -226,29 +264,33 @@
       width: max-content;
     }
 
-    & img {
-      width: 69.33px;
-      height: 32px;
+    & .breadcrumbs_services {
+      display: none;
+    }
 
-      @include tablet-sd {
-        width: 130px;
-        height: 60px;
-      }
+    & .breadcrumbs_publications {
+      display: none;
+    }
+
+    & .breadcrumbs_contact {
+      display: none;
     }
   }
 
   .is-shown__menu {
     display: flex;
+    
   }
 
   &__menu-wrapper {
     position: absolute;
     top: 0;
-    right: 0;
+    right: 30px;
     bottom: 0;
     left: 0;
 
     display: none;
+
     width: 100%;
     height: 100vh;
     grid-area: menu;
@@ -260,17 +302,22 @@
       height: auto;
     }
 
+    @include tablet-hd {
+      justify-content: flex-end;
+    }
+
     &::before {
       content: '';
 
-      position: absolute;
-      z-index: 1;
+      position: fixed;
+
+      z-index: 2;
 
       display: block;
       width: 100%;
-      height: 100%;
+      height: 100vh;
 
-      background-color: #323264;
+      background-color: $main-color-regular;
       opacity: 0.7;
 
       @include tablet-sd {
@@ -290,7 +337,7 @@
   }
 
   &__menu {
-    position: absolute;
+    position: fixed;
     right: 8px;
     bottom: 0;
     left: 8px;
@@ -353,6 +400,8 @@
         }
 
         .menu-item {
+          position: relative;
+
           display: flex;
           width: 100%;
           padding-top: 7px;
@@ -362,15 +411,7 @@
           background-color: #F5F5FA;
           border-radius: 12px;
 
-          transition: $baseAnimation;
-
-          &:hover {
-            color: $accent-color;
-          }
-
           @include tablet-sd {
-            position: relative;
-
             display: inline-block;
             width: max-content;
             padding-top: 0;
@@ -380,17 +421,27 @@
             border-radius: 0;
           }
 
-          &:hover {
-            color: $accent-color;
+          & a {
+            color: $active-color-regular;
 
-            cursor: pointer;
+            transition: $baseAnimation;
 
             @include tablet-sd {
               color: #fff;
             }
 
-            @include tablet-hd {
+            &:hover {
               color: $accent-color;
+
+              cursor: pointer;
+
+              @include tablet-sd {
+                color: #fff;
+              }
+
+              @include tablet-hd {
+                color: $accent-color;
+              }
             }
           }
 
@@ -405,7 +456,7 @@
             display: none;
             height: 2px;
 
-            background-color: #fff;
+            background-color: rgb(255, 255, 255);
 
             @include tablet-sd {
               display: flex;
